FIX Inline Docs 💯

--- a/block/01-basic/style.css
+++ b/block/01-basic/style.css
@@ -2,7 +2,7 @@
  * ----------------------------------------------------------------------------
  * #.# Frontend CSS
  *
- * BLOCK: 01-basic block CSS for the frontend.
+ * BLOCK: 01-basic block CSS for the editor & front end.
  * ----------------------------------------------------------------------------
  */
 
