--- a/block/02-basic-esnext/style.css
+++ b/block/02-basic-esnext/style.css
@@ -2,7 +2,7 @@
  * ----------------------------------------------------------------------------
  * #.# Frontend CSS
  *
- * BLOCK: 02-basic-esnext block CSS for the frontend.
+ * BLOCK: 02-basic-esnext block CSS for the editor & front end.
  * ----------------------------------------------------------------------------
  */
 
