--- a/block/04-tweet/style.css
+++ b/block/04-tweet/style.css
@@ -2,7 +2,7 @@
  * ----------------------------------------------------------------------------
  * #.# Frontend CSS
  *
- * BLOCK: 03-block-editable block CSS for the frontend.
+ * BLOCK: 03-block-editable block CSS for the front end (restricted in index.php).
  * ----------------------------------------------------------------------------
  */
 
