--- a/block/03-block-editable/style.css
+++ b/block/03-block-editable/style.css
@@ -2,7 +2,7 @@
  * ----------------------------------------------------------------------------
  * #.# Frontend CSS
  *
- * BLOCK: 03-block-editable block CSS for the frontend.
+ * BLOCK: 03-block-editable block CSS for the editor & front end.
  * ----------------------------------------------------------------------------
  */
 
