--- a/block/01-basic/editor.css
+++ b/block/01-basic/editor.css
@@ -6,7 +6,7 @@
  * ----------------------------------------------------------------------------
  */
 
-.wp-block-gb-01-basic {
+.wp-block-gb-basic-01 {
 	color: #000000;
 	background: mistyrose;
 	border: 0.2rem solid red;
