FIX: Block Tweet 04 💯

--- a/block/04-tweet/style.css
+++ b/block/04-tweet/style.css
@@ -6,7 +6,7 @@
  * ----------------------------------------------------------------------------
  */
 
-.wp-block-gb-04-tweet {
+.wp-block-gb-tweet-04 {
 	display: table;
 	color: #ffffff !important;
 	background: #1da1f2;
